css/style.css
* {
  padding: 0;
  margin: 0;
}

body {
  background-color: #262626;
}

.nav {
  display: flex;
  height: 75px;
  width: 100%;
  border-bottom: 3px solid #ffb600;
}

.nav-title {
  margin-top: 30px;
  margin-left: 43%;
}

.nav-title h3 {
  font-family: Roboto;
  font-size: 24px;
  color: #fff;
}

.title-span {
  color: #ffb600;
}

.menu-icon {
  position: absolute;
  top: 28px;
  right: 30px;
  cursor: pointer;
}

.menu-bar-top {
  width: 35px;
  height: 3px;
  background-color: #ffb600;
  margin-bottom: 6px;
}

.menu-bar-middle,
.menu-bar-bottom {
  width: 35px;
  height: 3px;
  background-color: #ffb600;
  margin-top: 6px;
}

/* Card style */
#card-div {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  align-items: baseline;
  margin-top: 8%;
}

img {
  width: 75px;
}

.card-wrapper {
  font-family: Roboto;
  font-weight: 100;
  font-size: 12px;
  color: #fff;
  margin-top: 6px;
  width: 50%;
}

.text-container {
  padding: 2px 16px;
}

/* iPhone X 375px */
@media only screen and (max-width: 375px) {
  .card-wrapper {
    margin: 16px;
  }

  .a-tag-img-div img {
    width: 65px;
  }
  .nav-title {
    margin-left: 37%;
  }
}

/* 320 Pixels */
@media only screen and (max-width: 320px) {
  .a-tag-img-div img {
    /* width: 60px; */
  }
}

